# mktiupgrade

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  config.mk  main.c  mktiupgrade.1.scdoc  mktiupgrade.1.txt
crypto/: ticrypto.c  ticrypto.h
upgrade/: devices.c  devices.h  intelhex.c  intelhex.h  upgrade.c  upgrade.h
